--- a/environments/kc-dev/apps/app-eda-kc-order-mq-ui/services/eda-kc-order-mq-ui/base/config/configmap.yaml
+++ b/environments/kc-dev/apps/app-eda-kc-order-mq-ui/services/eda-kc-order-mq-ui/base/config/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kc-order-ui-cm
 data:
   APP_VERSION: 0.0.1
-  API_HOST_ORDERMS: eda-kc-order-cmd-mq.kc-dev.svc
-  API_PORT_ORDERMS: 8080
-  API_HOST_VOYAGESMS: eda-kc-voyage-ms-mq.kc-dev.svc
-  API_PORT_VOYAGESMS: 8080
+  API_HOST_ORDERMS: http://eda-kc-order-cmd-mq.kc-dev.svc
+  API_PORT_ORDERMS: '8080'
+  API_HOST_VOYAGESMS: http://eda-kc-voyage-ms-mq.kc-dev.svc
+  API_PORT_VOYAGESMS: '8080'
