--- a/environments/kc-dev/services/ibm-mq/base/deployment.yaml
+++ b/environments/kc-dev/services/ibm-mq/base/deployment.yaml
@@ -24,4 +24,4 @@ spec:
         - containerPort: 5672
         envFrom:
         - configMapRef:
-            name: mq-config
+            name: kc-mq-config
