--- a/environments/kc-dev/services/ibm-mq/base/service.yaml
+++ b/environments/kc-dev/services/ibm-mq/base/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kc-mq-ibm-mq
+  namespace: kc-dev
 spec:
   selector:
     app.kubernetes.io/name: kc-mq-ibm-mq
