--- a/environments/kc-dev/services/ibm-mq/base/route.yaml
+++ b/environments/kc-dev/services/ibm-mq/base/route.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
@@ -17,4 +18,24 @@ spec:
   tls:
     termination: passthrough
     insecureEdgeTerminationPolicy: None
+  wildcardPolicy: None
+  
+---
+piVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  annotations:
+    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-kc-order-mq-ui.git
+  labels:
+    app.kubernetes.io/name: kc-mq-ibm-mq
+  name: kc-mq-ibm-mq
+  namespace: kc-dev
+spec:
+  host: ""
+  to:
+    kind: Service
+    name: kc-mq-ibm-mq
+    weight: 100
+  port:
+    targetPort: amqp
   wildcardPolicy: None
