Added amqp route

--- a/environments/kc-dev/services/ibm-mq/base/route.yaml
+++ b/environments/kc-dev/services/ibm-mq/base/route.yaml
@@ -21,7 +21,7 @@ spec:
   wildcardPolicy: None
   
 ---
-piVersion: route.openshift.io/v1
+apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   annotations:
