--- a/environments/kc-dev/services/ibm-mq/base/route.yaml
+++ b/environments/kc-dev/services/ibm-mq/base/route.yaml
@@ -28,7 +28,7 @@ metadata:
     app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/eda-kc-order-mq-ui.git
   labels:
     app.kubernetes.io/name: kc-mq-ibm-mq
-  name: kc-mq-ibm-mq
+  name: kc-mq-ibm-mq-amqp
   namespace: kc-dev
 spec:
   host: ""
