--- a/gitops/base/orderui/service.yaml
+++ b/gitops/base/orderui/service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: order-ui
 spec:
   selector:
-    app: order-ui
+    run: order-ui
   ports:
     - name: http
       protocol: TCP
