--- a/gitops/base/mq/deployment.yaml
+++ b/gitops/base/mq/deployment.yaml
@@ -2,18 +2,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ibmmq
-  labels:
-    name: ibmmq
+  name: ibmmq-dp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: ibmmq
+      app: ibmmq
   template:
     metadata:
       labels:
-        name: ibmmq
+        app: ibmmq
     spec:
       containers:
       - name: ibmmq
