--- a/gitops/base/orderui/deployment.yaml
+++ b/gitops/base/orderui/deployment.yaml
@@ -7,11 +7,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      run: order-ui
+      app: order-ui
   template:
     metadata:
       labels:
-        run: order-ui
+        app: order-ui
     spec:
       containers:
         - name: order-ui
