--- a/gitops/base/voyagems/deployment.yaml
+++ b/gitops/base/voyagems/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: voyagems
-        image: quay.io/ibmcase/eda-kc-voyage-ms-mq:1.2-distroless
+        image: quay.io/ibmcase/eda-kc-voyage-ms-mq
         ports:
         - containerPort: 8081
         envFrom:
